fix: number-1-images

--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -772,7 +772,7 @@ section.about-section {
 }
 .banner-sec{
     height: 400px;
-    background-image: url("../images/s3.jpg");
+    background-image: url("../images/S3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
